# algo-contest-kit

./: .gitignore  AGENT.md  README.md  pyproject.toml
config/: contests.yaml
templates/python/: common.py
tools/: gen_contest.py
