[project]
name = "algo-contest-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.2",
    "pandas==2.3.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.4",
    "sortedcontainers==2.4.0",
]

[tool.ruff.lint]
# 未使用のインポートの警告を無視する
ignore = ["F401"]